# voca

./: readme.txt
cpp/: run.sh
cpp/om3-compress/: AlpDecoder.cpp  AlpDecoder.h  AlpEncoder.cpp  AlpEncoder.h  CMakeLists.txt  CompressedData.cpp  CompressedData.h  MemoryManager.cpp  MemoryManager.h  main.cpp  utils.cpp  utils.h
cpp/voca-server-c/: CMakeLists.txt  server.cpp
cpp/voca-server-c/om3-compress-online/: AlpDecoder.cpp  AlpDecoder.h  AlpEncoder.cpp  AlpEncoder.h  CMakeLists.txt  CompressedData.cpp  CompressedData.h  Experiments.h  FunInfo.h  Heap.h  MemoryManager.cpp  MemoryManager.h  SCREEN_M4.h  SegmentTree.h  TimerStats.h  main.cpp  run-compress.sh  run.sh  utils.cpp  utils.h
cpp/voca-server-c/om3-compress-online/src/: plans.csv
cpp/voca-server-c/vscode/: c_cpp_properties.json  settings.json  tasks.json
initdb/: dbconfig.json
script/: applications.js  comparePhoto.py  createPhoto.py  run.sh
